--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cometchat-pro/chat": "^2.2.1",
     "@craco/craco": "^6.1.2",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/firestore": "^0.5.5",
@@ -13,7 +14,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@emotion/core": "^10.0.35",
+    "dateformat": "^4.0.0",
+    "emoji-mart": "^3.0.0",
+    "react-html-parser": "^2.0.2",
+    "twemoji": "^13.0.1"
   },
   "scripts": {
     "start": "craco start",
@@ -42,6 +48,9 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
+    "jest": "26.6.0",
+    "jest-canvas-mock": "^2.3.1",
+    "babel-jest": "26.6.0"
   }
 }
